Update hero image to new profile picture

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Salvador Villarroel</title>
-  <link rel="preload" href="/salvador/fonts/Inter-Regular.ttf" as="font" type="font/ttf" crossorigin>
-  <link rel="preload" href="/salvador/img/chess.webp" as="image" fetchpriority="high">
+  <link rel="preload" href="/salvador/fonts/Inter-Latin.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/salvador/img/hero-profile-new.jpg" as="image" fetchpriority="high">
 </head>
 
 <body>
