--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Salvador Villarroel</title>
   <link rel="preload" href="/salvador/fonts/Inter-Latin.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/salvador/img/hero-profile-new.jpg" as="image" fetchpriority="high">
+  <link rel="preload" href="/salvador/img/hero-profile-new.webp" as="image" fetchpriority="high">
 </head>
 
 <body>
